--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId "com.cxb.myfamilytree"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 219
         versionCode 3
         versionName "1.3 beta2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,13 +40,17 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation 'com.google.android.material:material:1.0.0'
 
-    implementation 'com.alibaba:fastjson:1.1.70.android'
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
-    implementation 'com.tencent.bugly:crashreport:2.6.6'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'com.alibaba:fastjson:1.2.62'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.tencent.bugly:crashreport:2.8.6.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+
+//    implementation 'com.android.support:support-compat:28.0.0'
+//    implementation 'com.android.support:support-v4:28.0.0'
+//    implementation 'androidx.core:core:1.1.0'
 }
