--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-beta01', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+//    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-beta01', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //    implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -46,11 +46,8 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.62'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.tencent.bugly:crashreport:2.8.6.0'
+//    implementation 'com.tencent.bugly:crashreport:2.8.6.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
-//    implementation 'com.android.support:support-compat:28.0.0'
-//    implementation 'com.android.support:support-v4:28.0.0'
-//    implementation 'androidx.core:core:1.1.0'
 }
